Replace old files with new ones

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="header">
+            <header class="header">
         <div class="container">
             <div class="logo">
                 <h1>Greenish</h1>
@@ -35,8 +35,10 @@
                     <li><a href="signup.html" class="nav-link">Sign Up</a></li>
                     <li><a href="about.html" class="nav-link">About Us</a></li>
                     <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+                    <li><a href="account.html" id="account-link" class="nav-link"></a></li>
                     <li><a href="categories.html" class="nav-link">Categories</a></li>
                     <li><a href="cart.html" class="cart-link nav-link">Cart (<span id="cart-count">0</span>)</a></li>
+                    <li id="cart-link"></li>
                     <li id="logout"></li>
                 </ul>
             </nav>
@@ -47,6 +49,7 @@
             </div>
         </div>
     </header>
+
 
     <div class="login-modal" id="login-modal">
         <div class="login-container">
