--- a/account.html
+++ b/account.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon"  href="images/download.jpg">
 </head>
-<body>
-    <header class="header">
+                <header class="header">
         <div class="container">
             <div class="logo">
                 <h1>Greenish</h1>
@@ -31,8 +30,10 @@
                     <li><a href="signup.html" class="nav-link">Sign Up</a></li>
                     <li><a href="about.html" class="nav-link">About Us</a></li>
                     <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+                    <li><a href="account.html" id="account-link" class="nav-link"></a></li>
                     <li><a href="categories.html" class="nav-link">Categories</a></li>
                     <li><a href="cart.html" class="cart-link nav-link">Cart (<span id="cart-count">0</span>)</a></li>
+                    <li id="cart-link"></li>
                     <li id="logout"></li>
                 </ul>
             </nav>
@@ -43,6 +44,8 @@
             </div>
         </div>
     </header>
+
+
     <main class="main-content">
         <section class="account-section">
             <div class="container">
