--- a/categories.html
+++ b/categories.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-    <header class="header">
+             <header class="header">
         <div class="container">
             <div class="logo">
                 <h1>Greenish</h1>
@@ -32,10 +32,11 @@
                     <li><a href="signup.html" class="nav-link">Sign Up</a></li>
                     <li><a href="about.html" class="nav-link">About Us</a></li>
                     <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+                    <li><a href="account.html" id="account-link" class="nav-link"></a></li>
                     <li><a href="categories.html" class="nav-link">Categories</a></li>
                     <li><a href="cart.html" class="cart-link nav-link">Cart (<span id="cart-count">0</span>)</a></li>
+                    <li id="cart-link"></li>
                     <li id="logout"></li>
-
                 </ul>
             </nav>
             <div class="mobile-menu-btn">
@@ -45,6 +46,7 @@
             </div>
         </div>
     </header>
+
 
     <main class="main-content">
         <section class="categories-section fade-in">
