--- a/reset-password.html
+++ b/reset-password.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="header">
+                <header class="header">
         <div class="container">
             <div class="logo">
                 <h1>Greenish</h1>
@@ -30,8 +30,10 @@
                     <li><a href="signup.html" class="nav-link">Sign Up</a></li>
                     <li><a href="about.html" class="nav-link">About Us</a></li>
                     <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+                    <li><a href="account.html" id="account-link" class="nav-link"></a></li>
                     <li><a href="categories.html" class="nav-link">Categories</a></li>
                     <li><a href="cart.html" class="cart-link nav-link">Cart (<span id="cart-count">0</span>)</a></li>
+                    <li id="cart-link"></li>
                     <li id="logout"></li>
                 </ul>
             </nav>
@@ -42,6 +44,8 @@
             </div>
         </div>
     </header>
+
+
     <main class="main-content">
         <section class="form-section" style="max-width: 500px; margin: 3rem auto;">
             <h2 class="section-title">Reset Your Password</h2>
