--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="header">
+              <header class="header">
         <div class="container">
             <div class="logo">
                 <h1>Greenish</h1>
@@ -35,8 +35,10 @@
                     <li><a href="signup.html" class="nav-link">Sign Up</a></li>
                     <li><a href="about.html" class="nav-link">About Us</a></li>
                     <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+                    <li><a href="account.html" id="account-link" class="nav-link"></a></li>
                     <li><a href="categories.html" class="nav-link">Categories</a></li>
                     <li><a href="cart.html" class="cart-link nav-link">Cart (<span id="cart-count">0</span>)</a></li>
+                    <li id="cart-link"></li>
                     <li id="logout"></li>
                 </ul>
             </nav>
@@ -120,13 +122,12 @@
                         <span class="error-message"></span>
                     </div>
 
-                    <div class="form-group">
-                        <input type="checkbox" id="terms" required>
+                        <input type="checkbox" id="terms" required >
                         <label for="terms">I agree to the <a href="#">Terms and Conditions</a></label>
                         <span class="error-message"></span>
-                    </div>
-
-                    <button type="submit" class="btn btn-primary">Create Account</button>
+                        <div class="form-grou" style="width: 50%; margin-top: 1rem;">
+                                <button type="submit" class="btn btn-primary">Create Account</button>
+                        </div>
                 </form>
 
                 <p class="login-link" style="text-align: center; margin-top: 1rem;">Already have an account? <button id="show-login-modal" style="background: transparent; border: none; cursor: pointer; color: blue; font-size: 1rem;">Login Here</button>
